--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
 		"axios": "^1.6.8",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-error-boundary": "^4.0.13",
 		"react-redux": "^9.1.0",
 		"react-router-dom": "^6.22.3",
-		"react-error-boundary": "^4.0.13"
+		"swiper": "^11.1.9"
 	},
 	"devDependencies": {
 		"@types/react": "^18.3.3",
